Selector screen, custom view created

--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -26,5 +26,15 @@
         android:id="@+id/homeFragment"
         android:name="com.rmygym.presentation.ui.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_selectorExerciseFragment"
+            app:destination="@id/selectorExerciseFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/selectorExerciseFragment"
+        android:name="com.rmygym.presentation.ui.selector.SelectorExerciseFragment"
+        android:label="SelectorExerciseFragment"
+        tools:layout="@layout/fragment_selector_exercise" />
+
 </navigation>
