--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
     <fragment
         android:id="@+id/navHostFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="@dimen/match_constraint"
-        android:layout_height="@dimen/match_constraint"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_below="@+id/toolbar"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
