--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -2,10 +2,33 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_main.xml"
-    app:startDestination="@id/splashViewFragment">
+    app:startDestination="@id/splashViewFragment2">
 
     <fragment
-        android:id="@+id/splashViewFragment"
+        android:id="@+id/loginFragment"
+        android:name="com.rmygym.presentation.ui.login.LoginFragment"
+        android:label="LoginFragment">
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.rmygym.presentation.ui.register.RegisterFragment"
+        android:label="RegisterFragment"/>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.rmygym.presentation.ui.home.HomeFragment"
+        android:label="HomeFragment" />
+    <fragment
+        android:id="@+id/splashViewFragment2"
         android:name="com.rmygym.presentation.ui.splash.SplashViewFragment"
-        android:label="SplashViewFragment" />
+        android:label="SplashViewFragment" >
+        <action
+            android:id="@+id/action_splashViewFragment2_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
