--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -7,5 +7,29 @@
     <fragment
         android:id="@+id/splashViewFragment"
         android:name="com.projectBase.ui.splash.SplashViewFragment"
-        android:label="SplashViewFragment" />
+        android:label="SplashViewFragment">
+        <action
+            android:id="@+id/action_splashViewFragment2_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.projectBase.ui.login.LoginFragment"
+        android:label="LoginFragment">
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.projectBase.ui.register.RegisterFragment"
+        android:label="RegisterFragment" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.projectBase.ui.home.HomeViewFragment"
+        android:label="HomeFragment" />
 </navigation>
